# service-monitor

./: .env.example  .gitignore  README.servicemonitor.md  pyproject.toml
cloudflared/: config.yml
scripts/: rename_project_local.sh  rename_service_pi.sh  update-upgrade-pi.sh
src/: app.py  canned_info.py  scheduler.py  services.py  system_metrics.py  telegram.py  values.py.example
static/: app.css  app.js  log-stream.js  main.js  notifications.js  services-list.js  sidebar-details.js  system-info.js  system-metrics-chart.js  ui-shell.js
templates/: index.html
tests/: test_app.py  test_config.py  test_scheduler.py  test_services.py  test_system_metrics.py  test_telegram.py
