[project]
name = "service-monitor"
version = "0.1.0"
description = "Web dashboard for monitoring systemd services"
authors = [
    {name = "momonala",email = "mnalavadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "schedule>=1.0.0",
    "requests",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "ruff>=0.14.10",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
]

[tool.config]
# Server settings
flask_port = 5001

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
app = "src.app:main"
config = "src.config:main"

[tool.black]
line-length = 110
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 110
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-s -v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
exclude-newer = "1 week"
